tests/baselines/reference/annotationApplicationError5.errors.txt
tests/cases/conformance/annotations/annotationApplicationError5.ets(6,7): error TS2345: Argument of type '{}' is not assignable to parameter of type 'Anno'.
  Type '{}' is missing the following properties from type 'Anno': a, b


==== tests/cases/conformance/annotations/annotationApplicationError5.ets (1 errors) ====
    @interface Anno {
        a: number
        b: string[]
    }
    
    @Anno({})
          ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'Anno'.
!!! error TS2345:   Type '{}' is missing the following properties from type 'Anno': a, b
    class C {}
    